Project created with a level and an entity.

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,4 @@ dev/SetupAssistantUserPreferences.ini
 SetupAssistant.bat
 dev/UserSettings.xml
 dev/OnlyEditor/Levels/tutorial/_savebackup/
+dev/StraightLineMover/Levels/tutorial/_savebackup/
