Finished Simplest C++ project in LY 1.11

--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,4 @@ SetupAssistant.bat
 dev/UserSettings.xml
 dev/OnlyEditor/Levels/tutorial/_savebackup/
 dev/StraightLineMover/Levels/tutorial/_savebackup/
+dev/SimplestCPlusPlus/Levels/tutorial/_savebackup/
