--- a/dev/bootstrap.cfg
+++ b/dev/bootstrap.cfg
@@ -43,6 +43,7 @@ android_connect_to_remote=0
 appletv_connect_to_remote=0
 ios_connect_to_remote=0
 osx_connect_to_remote=0
-assetProcessor_branch_token = 0x8B82EF26
+assetProcessor_branch_token = 0x9CAA8BE6
+
 
 
