--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,4 @@ dev/Bin64vc140.Dedicated/
 dev/SimplestCPlusPlus/.vscode/
 dev/Tools/CrySCompileServer/x64/
 dev/Tools/Python/2.7.12/
+dev/GridMatePlayers/Levels/tutorial/_savebackup/
