--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,9 @@ dev/SimplestCPlusPlus/.vscode/
 dev/Tools/CrySCompileServer/x64/
 dev/Tools/Python/2.7.12/
 dev/GridMatePlayers/Levels/tutorial/_savebackup/
+dev/Bin64vc140.Debug/
+dev/Bin64vc140.Debug.Dedicated/
+dev/Bin64vc140.Debug.Test/
+dev/Bin64vc140.Test/
+dev/Tools/LmbrSetup/Win.vc140.Debug/
+dev/Tools/crcfix/bin/vc140/
