--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,4 @@ dev/Bin64vc140.Debug.Test/
 dev/Bin64vc140.Test/
 dev/Tools/LmbrSetup/Win.vc140.Debug/
 dev/Tools/crcfix/bin/vc140/
+dev/GridMatePlayers/.vs/VSWorkspaceState.json
